Bug fix typo error

--- a/support.html
+++ b/support.html
@@ -95,8 +95,8 @@
                 <table class="mt-5 table table-dark">
                     <thead>
                         <tr>
-                            <th scope="col">Joystick [Control]</th>
-                            <th scope="col">Functions</th>
+                            <th scope="col">JOYSTICK [Control]</th>
+                            <th scope="col">FUNCTION</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -105,15 +105,15 @@
                             <td>Select UI (User Interface)</td>
                         </tr>
                         <tr>
-                            <td>Left Joystick/td>
+                            <td>Left Joystick</td>
                             <td>Move Avatar</td>
                         </tr>
                         <tr>
-                            <td>Rigth Joystick</td>
+                            <td>Right Joystick</td>
                             <td>Rotate Avatar</td>
                         </tr>
                         <tr>
-                            <td>Push Righ Joystick forward</td>
+                            <td>Push Right Joystick forward</td>
                             <td>Teleport</td>
                         </tr>
                         <tr>
