Fixed Typo Errors and Added phone numbers numbers

--- a/faq.html
+++ b/faq.html
@@ -195,7 +195,7 @@
                   <h4>Payment Account</h4>
                   <h5>0123463519</h5>
                   <p>BOAT ISLAND</p>
-                  <p>Guarantee Trust Bank</p>
+                  <p>WEMA Bank</p>
                 </div>
               </div>
               <div class="contact-info">
@@ -203,9 +203,9 @@
                   <span class="fa fa-phone" aria-hidden="true"></span>
                 </div>
                 <div class="contact-details">
-                  <h4>Call for help:</h4>
-                  <p><a href="tel:+040-123-456-88">+040-123-456-88</a></p>
-                  <p><a href="tel:+040-123-456-89">+040-123-456-89</a></p>
+                  <h4>Call or WhatsApp:</h4>
+                  <p><a href="tel:+040-123-456-88">+234-915-566-5555</a></p>
+                  <p><a href="tel:+040-123-456-89">+97-158-188-5291</a></p>
                 </div>
               </div>
               <div class="contact-info">
