--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="container py-lg-3">
           <div class="row">
             <div class="col-md-12">
-              <div class="owl-three owl-carousel owl-theme logo-view">
+              <div class="owl-three owl-carousel owl-theme">
                 <div class="item">
                   <img src="assets/images/s1.jpg" alt="paintball arena" class="img-fluid">
                 </div>
