Updated Legal Information footer links

--- a/register.html
+++ b/register.html
@@ -139,10 +139,9 @@
                           <div class="col-md-6 column mt-md-0 mt-4">
                               <h3>Legal Information</h3>
                               <ul class="footer-gd-16">
-                                  <li><a href="#url">Terms & Conditions</a></li>
-                                  <li><a href="#url">Privacy Policy</a></li>
-                                  <li><a href="#url">License Agreement</a></li>
-                                  <li><a href="#url">Other Products</a></li>
+                                  <li><a href="terms.html">Terms of Use</a></li>
+                                  <li><a href="privacy.html#privacy">Privacy Policy</a></li>
+                                  <li><a href="privacy.html">Security Agreement</a></li>
                               </ul>
                           </div>
                       </div>
