--- a/support.html
+++ b/support.html
@@ -21,10 +21,6 @@
     <header id="site-header" class="fixed-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg stroke">
-                <!-- <a class="navbar-brand" href="index.html">
-                <span class="fa fa-handshake-o"></span> Masterwork
-            </a> -->
-
                 <a class="navbar-brand" href="index.html">
                     <img src="assets/images/logo.png" alt="Your logo" title="bivr logo" style="height:35px;" />
                     <img src="assets/images/logo-txt.png" alt="Your logo" title="bivr logo" style="height:35px;" />
@@ -184,9 +180,7 @@
         </section>
     </main>
     <footer>
-        <!-- footer -->
         <section class="w3l-footer">
-
             <div class="w3l-footer-16-main py-5" style="background-color: #242464 !important">
                 <div class="container">
                     <div class="row">
@@ -206,10 +200,9 @@
                                 <div class="col-md-6 column mt-md-0 mt-4">
                                     <h3>Legal Information</h3>
                                     <ul class="footer-gd-16">
-                                        <li><a href="#url">Terms & Conditions</a></li>
-                                        <li><a href="#url">Privacy Policy</a></li>
-                                        <li><a href="#url">License Agreement</a></li>
-                                        <li><a href="#url">Other Products</a></li>
+                                        <li><a href="terms.html">Terms of Use</a></li>
+                                        <li><a href="privacy.html#privacy">Privacy Policy</a></li>
+                                        <li><a href="privacy.html">Security Agreement</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -332,44 +325,6 @@
     </script>
 
     <!--//MENU-JS-->
-
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('.popup-with-zoom-anim').magnificPopup({
-                type: 'inline',
-
-                fixedContentPos: true,
-                fixedBgPos: true,
-
-                overflowY: 'auto',
-
-                closeBtnInside: true,
-                preloader: false,
-
-                midClick: true,
-                removalDelay: 300,
-                mainClass: 'my-mfp-zoom-in'
-            });
-
-            $('.popup-with-move-anim').magnificPopup({
-                type: 'inline',
-
-                fixedContentPos: false,
-                fixedBgPos: true,
-
-                overflowY: 'auto',
-
-                closeBtnInside: true,
-                preloader: false,
-
-                midClick: true,
-                removalDelay: 300,
-                mainClass: 'my-mfp-slide-bottom'
-            });
-        });
-    </script>
-
 
     <!--  Bootstrap JS -->
     <script src="assets/js/bootstrap.min.js"></script>
