--- a/terms.html
+++ b/terms.html
@@ -370,50 +370,67 @@
                         that provides for the immediate termination of Accounts of users who infringe the rights of
                         copyright holders or is found infringing any of the Users&OpenCurlyQuote; obligations stated
                         above.</p>
-                        <h6 class="sub-title py-3">9. General Terms</h6>
-                        <ol class="mx-5">
-                            <li style="list-style-type:lower-roman">In the event that any provision in these Terms of Use is held to be invalid or unenforceable,
-                                other provisions contained in these terms will remain in full force and effect.</li>
-                            <li style="list-style-type:lower-roman">Nothing in these terms of use insinuates or intends to insinuate an acceptance of warranty
-                                or liability by Boat Island to its users.</li>
-                            <li style="list-style-type:lower-roman">The failure of a party to enforce any right or provision of these Terms of Use shall not be
-                                deemed a waiver of such right or provision. You (the user) may not assign this Agreement (by
-                                operation of law or otherwise) without the prior written consent of Boat Island, and any
-                                prohibited assignment or activity by the user will be null and void and of no effect</li>
-                            <li style="list-style-type:lower-roman">Boat Island may assign these Terms of Use Agreement or any rights hereunder without your
-                                consent. The relationship of the parties under these Terms of Use is that of independent
-                                contractors, and these Terms of Use will not be construed to imply that either party is the
-                                agent, employee, or joint venture of the other. Note that if you elect to become a User/Client,
-                                the relationship of the parties will be governed by these Terms of Use, our Privacy Policy &
-                                Security Compliance Agreement and any additional terms Boat Island may introduce from time
-                                to time.</li>
-                            <li style="list-style-type:lower-roman">The management of Boat Island reserve the right to make whatever changes or decisions as
-                                they deem fit to the Boat Island website/app at any time, provided that such changes and
-                                decisions are intended to promote their objectives, enhance the progress of the Boat Island
-                                app/website, prevent all kinds of fraud as well as comply with relevant laws and regulation.</li>
-                            <li style="list-style-type:lower-roman">These terms are subject to review and change by Boat Island from time to time.</li>
-                            <li style="list-style-type:lower-roman">You agree the only way to provide legal notice to Boat Island is through the provided
-                                address contained in this document.</li>
-                        </ol>
-                        <h6 class="sub-title py-3">10. International Use</h6>
-                        <p class="py-2">Boat Island is designed for use both within and outside Nigeria. However, all Users from outside
-                            Nigeria must first ensure that the use of Boat Island is legal or permissible by their local laws.
-                            To that effect, any user who accesses or tries to access Boat Island from other
-                            countries/regions must bear full responsibility for compliance with local laws.</p>
-                            <h6 class="sub-title py-3">11. Feedback</h6>
-                            <p class="py-2">Your feedback is welcome and highly encouraged. You may submit feedback by sending us a
-                                mail at our official email address provided below. Furthermore, you accept that ;</p>
-                            <ol class="mx-5">
-                                <li style="list-style-type:lower-roman">by submitting feedbacks, unsolicited ideas and mails or to Boat Island or any of its
-                                    employees or representatives or by any other means of communication, you automatically
-                                    forfeit your right to any intellectual property rights in such ideas; and</li>
-                                <li style="list-style-type:lower-roman">such unsolicited ideas automatically become the property of Boat Island. You hereby assign
-                                    and agree to assign all rights, title, and interest you have in such feedback and ideas to Boat
-                                    Island together with all intellectual property rights therein. In addition, you accept that for
-                                    purposes of Boat Island terms and its services, all moral rights in any feedback are
-                                    automatically waived and you also accept to waive same.</li>
-                            </ol>
-                            <p class="mx-5 py-2">For further information, kindly contact us on <a href="mailto:support@bivr.io">support@bivr.io</a> ………………………………</p>
+                    <h6 class="sub-title py-3">9. General Terms</h6>
+                    <ol class="mx-5">
+                        <li style="list-style-type:lower-roman">In the event that any provision in these Terms of Use is
+                            held to be invalid or unenforceable,
+                            other provisions contained in these terms will remain in full force and effect.</li>
+                        <li style="list-style-type:lower-roman">Nothing in these terms of use insinuates or intends to
+                            insinuate an acceptance of warranty
+                            or liability by Boat Island to its users.</li>
+                        <li style="list-style-type:lower-roman">The failure of a party to enforce any right or provision
+                            of these Terms of Use shall not be
+                            deemed a waiver of such right or provision. You (the user) may not assign this Agreement (by
+                            operation of law or otherwise) without the prior written consent of Boat Island, and any
+                            prohibited assignment or activity by the user will be null and void and of no effect</li>
+                        <li style="list-style-type:lower-roman">Boat Island may assign these Terms of Use Agreement or
+                            any rights hereunder without your
+                            consent. The relationship of the parties under these Terms of Use is that of independent
+                            contractors, and these Terms of Use will not be construed to imply that either party is the
+                            agent, employee, or joint venture of the other. Note that if you elect to become a
+                            User/Client,
+                            the relationship of the parties will be governed by these Terms of Use, our Privacy Policy &
+                            Security Compliance Agreement and any additional terms Boat Island may introduce from time
+                            to time.</li>
+                        <li style="list-style-type:lower-roman">The management of Boat Island reserve the right to make
+                            whatever changes or decisions as
+                            they deem fit to the Boat Island website/app at any time, provided that such changes and
+                            decisions are intended to promote their objectives, enhance the progress of the Boat Island
+                            app/website, prevent all kinds of fraud as well as comply with relevant laws and regulation.
+                        </li>
+                        <li style="list-style-type:lower-roman">These terms are subject to review and change by Boat
+                            Island from time to time.</li>
+                        <li style="list-style-type:lower-roman">You agree the only way to provide legal notice to Boat
+                            Island is through the provided
+                            address contained in this document.</li>
+                    </ol>
+                    <h6 class="sub-title py-3">10. International Use</h6>
+                    <p class="py-2">Boat Island is designed for use both within and outside Nigeria. However, all Users
+                        from outside
+                        Nigeria must first ensure that the use of Boat Island is legal or permissible by their local
+                        laws.
+                        To that effect, any user who accesses or tries to access Boat Island from other
+                        countries/regions must bear full responsibility for compliance with local laws.</p>
+                    <h6 class="sub-title py-3">11. Feedback</h6>
+                    <p class="py-2">Your feedback is welcome and highly encouraged. You may submit feedback by sending
+                        us a
+                        mail at our official email address provided below. Furthermore, you accept that ;</p>
+                    <ol class="mx-5">
+                        <li style="list-style-type:lower-roman">by submitting feedbacks, unsolicited ideas and mails or
+                            to Boat Island or any of its
+                            employees or representatives or by any other means of communication, you automatically
+                            forfeit your right to any intellectual property rights in such ideas; and</li>
+                        <li style="list-style-type:lower-roman">such unsolicited ideas automatically become the property
+                            of Boat Island. You hereby assign
+                            and agree to assign all rights, title, and interest you have in such feedback and ideas to
+                            Boat
+                            Island together with all intellectual property rights therein. In addition, you accept that
+                            for
+                            purposes of Boat Island terms and its services, all moral rights in any feedback are
+                            automatically waived and you also accept to waive same.</li>
+                    </ol>
+                    <p class="mx-5 py-2">For further information, kindly contact us on <a
+                            href="mailto:support@bivr.io">support@bivr.io</a> ………………………………</p>
             </div>
         </section>
     </main>
@@ -440,10 +457,9 @@
                                 <div class="col-md-6 column mt-md-0 mt-4">
                                     <h3>Legal Information</h3>
                                     <ul class="footer-gd-16">
-                                        <li><a href="#url">Terms & Conditions</a></li>
-                                        <li><a href="#url">Privacy Policy</a></li>
-                                        <li><a href="#url">License Agreement</a></li>
-                                        <li><a href="#url">Other Products</a></li>
+                                        <li><a href="terms.html">Terms of Use</a></li>
+                                        <li><a href="privacy.html#privacy">Privacy Policy</a></li>
+                                        <li><a href="privacy.html">Security Agreement</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -563,47 +579,6 @@
             });
         });
     </script>
-
-    <!--//MENU-JS-->
-
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('.popup-with-zoom-anim').magnificPopup({
-                type: 'inline',
-
-                fixedContentPos: true,
-                fixedBgPos: true,
-
-                overflowY: 'auto',
-
-                closeBtnInside: true,
-                preloader: false,
-
-                midClick: true,
-                removalDelay: 300,
-                mainClass: 'my-mfp-zoom-in'
-            });
-
-            $('.popup-with-move-anim').magnificPopup({
-                type: 'inline',
-
-                fixedContentPos: false,
-                fixedBgPos: true,
-
-                overflowY: 'auto',
-
-                closeBtnInside: true,
-                preloader: false,
-
-                midClick: true,
-                removalDelay: 300,
-                mainClass: 'my-mfp-slide-bottom'
-            });
-        });
-    </script>
-
-
     <!--  Bootstrap JS -->
     <script src="assets/js/bootstrap.min.js"></script>
 </body>
