--- a/support.html
+++ b/support.html
@@ -75,15 +75,70 @@
                     <h3>How To Side Load</h3>
                 </div>
             </div>
-            <div class="container">
-                <div class=" text-center py-lg-5">
+            <div class="container text-center">
+                <div class="text-center py-lg-5">
                     <img src="assets/images/e3.png" class="img-curve img-fluid" alt="how to sideload">
                 </div>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate aspernatur porro magni unde
-                    autem quas velit saepe accusantium laudantium dolor ullam perspiciatis, aliquam, quos eveniet
-                    voluptate commodi harum earum excepturi!</p>
+                <div class="header-section py-lg-5">
+                    <h3>User Flow</h3>
+                </div>
+                <p class="py-2">Once the App loads users will enter a login scene</p>
+                <p class="py-2"><strong>Login Scene: </strong>In the Login scene A user will choose to either login
+                    anonymouslyor with an
+                    ID with with other users can ldentify you.
+                    Once loggedin you will enter the.</p>
+                <p class="py-2"><strong>Home Scene:</strong> In the home scene there is an Avatar selector and UI setup
+                    forjoining
+                    Rooms/Worlds. We currently have three worlds in the BIVRalpha. the Island Boat,Island Sky and Game
+                    room.</p>
+                <p class="py-2"><strong>Island Boat:</strong> Starts on a boat sailing towards an island, once the boat
+                    docks auser can
+                    exit onto the Island(this scene is mainly to show the boatcruise capability)</p>
+                <p class="py-2">Island Sky: This is the main world in the BIVR alpha,it is the same island onthe island
+                    boat but it is better configured for exploration, it startup in the sky on the wing of an aircraft
+                    the user jumps off for askydiving experience onto the island to explore all the different
+                    attractions.</p>
+                <p class="py-2"><strong>Game Room:</strong> This room is aprivate room with maximum occupancy of
+                    twousers, once a user
+                    joins the room with a friend they can voice chatwhile playing the the different games and props.
+                </p>
             </div>
+        </section>
+        <section class="container w3l-about1 py-lg-5">
+            <div class="header-section py-lg-5 text-center">
+                <h3>User Flow</h3>
+            </div>
+            <div class="cwp4-text col-lg-6">
+                <ul class="cont-4">
+                  <li><span class="fa fa-check"></span>Education & Training</li>
+                  <li><span class="fa fa-check"></span>Utilities & Reference</li>
+                  <li><span class="fa fa-check"></span>Social & Networking</li>
+                  <li><span class="fa fa-check"></span>Media &Entertainment</li>
+                  <li><span class="fa fa-check"></span>Productivity and collaboration</li>
+                  <li><span class="fa fa-check"></span>Gaming</li>
+                  <li><span class="fa fa-check"></span>Art & Creativity </li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <div class="container w3l-about1 py-lg-5">
+                <div class="header-section py-lg-5 text-center">
+                    <h3>BIVR Features</h3>
+                </div>
 
+            <div class="cwp4-text col-lg-6">
+                <ul class="cont-4">
+                  <li><span class="fa fa-check"></span>Boat House Party Area (Private & Public)</li>
+                  <li><span class="fa fa-check"></span>Island landscape with vegetation and wild Life</li>
+                  <li><span class="fa fa-check"></span>Play room with board games</li>
+                  <li><span class="fa fa-check"></span>Boat Tour across the Island</li>
+                  <li><span class="fa fa-check"></span>A sky diving experience</li>
+                  <li><span class="fa fa-check"></span>Paint balling on the Island</li>
+                </ul>
+            </div>
+            </div>
+        </section>
+        <section>
             <div class="container text-center py-lg-5">
                 <div class="header-section mx-auto">
                     <h3>Controls</h3>
@@ -323,6 +378,44 @@
             });
         });
     </script>
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('.popup-with-zoom-anim').magnificPopup({
+                type: 'inline',
+
+                fixedContentPos: true,
+                fixedBgPos: true,
+
+                overflowY: 'auto',
+
+                closeBtnInside: true,
+                preloader: false,
+
+                midClick: true,
+                removalDelay: 300,
+                mainClass: 'my-mfp-zoom-in'
+            });
+
+            $('.popup-with-move-anim').magnificPopup({
+                type: 'inline',
+
+                fixedContentPos: false,
+                fixedBgPos: true,
+
+                overflowY: 'auto',
+
+                closeBtnInside: true,
+                preloader: false,
+
+                midClick: true,
+                removalDelay: 300,
+                mainClass: 'my-mfp-slide-bottom'
+            });
+        });
+    </script>
+
+
 
     <!--//MENU-JS-->
 
