Updated telephone numbers

--- a/support.html
+++ b/support.html
@@ -69,16 +69,44 @@
     </nav>
     <!-- /contact breadcrumbs -->
     <main>
-        <section>
-            <div class="container py-lg-5">
-                <div class="header-section text-center mx-auto">
-                    <h3>How To Side Load</h3>
+
+        <section class="w3l-about4" id="about">
+            <div class="new-block py-5">
+                <div class="container py-lg-5">
+                    <div class="middle-section text-center">
+                        <div class="header-section text-center mx-auto">
+                            <!-- <h6 class="sub-title">Explore The Boat Island</h6> -->
+                            <h3>Video Description</h3>
+                        </div>
+                        <div class="history-info mt-5">
+                            <div class="position-relative">
+                                <img src="assets/images/e3.png" class="img-fluid img-curve video-popup-image"
+                                    alt="video-popup">
+
+                                <a href="#small-dialog"
+                                    class="popup-with-zoom-anim play-view text-center position-absolute">
+                                    <span class="video-play-icon">
+                                        <span class="fa fa-play"></span>
+                                    </span>
+                                </a>
+
+                                <!-- dialog itself, mfp-hide class is required to make dialog hidden -->
+                                <div id="small-dialog" class="zoom-anim-dialog mfp-hide">
+                                    <iframe src="https://www.youtube.com/embed/RoIXxIfRNTw" allowfullscreen></iframe>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mt-5 request-quote">
+                            <a type="button" class="btn btn-primary theme-button" href="register.html">
+                                Download
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
+        </section>
+        <section>
             <div class="container text-center">
-                <div class="text-center py-lg-5">
-                    <img src="assets/images/e3.png" class="img-curve img-fluid" alt="how to sideload">
-                </div>
                 <div class="header-section py-lg-5">
                     <h3>User Flow</h3>
                 </div>
@@ -183,55 +211,6 @@
                 </table>
             </div>
 
-        </section>
-
-        <section class="w3l-about4" id="about">
-            <div class="new-block py-5">
-                <div class="container py-lg-5">
-                    <div class="middle-section text-center">
-                        <div class="header-section text-center mx-auto">
-                            <h6 class="sub-title">Explore The Boat Island</h6>
-                            <h3>Watch Thriller</h3>
-                        </div>
-                        <div class="history-info mt-5">
-                            <div class="position-relative">
-                                <img src="assets/images/e2.png" class="img-fluid img-curve video-popup-image"
-                                    alt="video-popup">
-
-                                <a href="#small-dialog"
-                                    class="popup-with-zoom-anim play-view text-center position-absolute">
-                                    <span class="video-play-icon">
-                                        <span class="fa fa-play"></span>
-                                    </span>
-                                </a>
-
-                                <!-- dialog itself, mfp-hide class is required to make dialog hidden -->
-                                <div id="small-dialog" class="zoom-anim-dialog mfp-hide">
-                                    <iframe src="https://www.youtube.com/embed/yRh7N-CluiM" allowfullscreen></iframe>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="mt-5 request-quote">
-                            <!-- request a demo form popup -->
-                            <a type="button" class="btn btn-primary theme-button" href="register.html">
-                                Download
-                            </a>
-
-                            <!-- Modal -->
-                            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
-                                aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                                <div class="modal-dialog modal-dialog-centered" role="document">
-                                    <div class="modal-content">
-                                        <img src="assets/images/bg.jpg" alt="P2W" />
-                                        <a href="p2w.html" class="btn btn-light theme-button" style="line-height: 2rem; padding: 0 20px; border-radius: 40px; position: absolute; bottom: 20px; left:20px;
-                      color: #fff; background: #ab07d4; border: none;">Go To Event</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </section>
     </main>
     <footer>
