Added Eror page and modified Success page

--- a/failed.html
+++ b/failed.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment Successful - Boat Island</title>
+    <title>Payment Cancelled - Boat Island</title>
     <!-- Template CSS -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
 
@@ -64,7 +64,6 @@
     <nav id="breadcrumbs" class="breadcrumbs">
         <div class="container page-wrapper">
             <a href="index.html">Home</a> » <a href="events.html" class="breadcrumb_last" aria-current="page">Events</a>
-            » <span class="breadcrumb_last" aria-current="page">Download Game</span>
         </div>
     </nav>
     <!-- /contact breadcrumbs -->
@@ -72,16 +71,13 @@
         <section class="w3l-products py-5 mb-4" id="projects">
             <div class="container py-lg-5 text-center">
                 <div class="header-section mx-auto">
-                    <h3>Your Registration was Sucessfull </h3>
+                    <h3>Something Went Wrong</h3>
                 </div>
-                <img src="assets/images/s8.png" alt="resiser" class="img-fluid">
-                <h4 class="py-2">Your Payment Receipt has been sent to your email</h4>
+                <img src="assets/images/s9.png" alt="resiser" class="img-fluid">
+                <h4 class="py-2">An error seems to have occured. Go back to Events and try again</h4>
             </div>
-            <div class="container py-2 text-center">
-
-                <a href="https://afrolife.club/BIVR/boat_island_vr.apk" class="btn btn-info theme-button"
-                    download="BIVR">Click to Download BIVR
-                </a> <a href="index.html" class="btn btn-inline-primary theme-button text-capitalize" download="BIVR">Go to Homepage
+            <div class="container py-lg-5 text-center">
+                <a href="events.html" class="btn btn-primary theme-button text-capitalize" download="BIVR">Go back to Events
                 </a>
             </div>
         </section>
