Fixed the download bug on error page redirect

--- a/success.html
+++ b/success.html
@@ -81,7 +81,7 @@
 
                 <a href="https://afrolife.club/BIVR/boat_island_vr.apk" class="btn btn-info theme-button"
                     download="BIVR">Click to Download BIVR
-                </a> <a href="index.html" class="btn btn-inline-primary theme-button text-capitalize" download="BIVR">Go to Homepage
+                </a> <a href="index.html" class="btn btn-inline-primary theme-button text-capitalize">Go to Homepage
                 </a>
             </div>
         </section>
