--- a/failed.html
+++ b/failed.html
@@ -77,7 +77,7 @@
                 <h4 class="py-2">An error seems to have occured. Go back to Events and try again</h4>
             </div>
             <div class="container py-lg-5 text-center">
-                <a href="events.html" class="btn btn-primary theme-button text-capitalize" download="BIVR">Go back to Events
+                <a href="events.html" class="btn btn-primary theme-button text-capitalize">Go back to Events
                 </a>
             </div>
         </section>
