Added Loader stylesheet for support and event page

--- a/register.html
+++ b/register.html
@@ -10,6 +10,8 @@
 
     <!-- Template CSS -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
+    <!-- Loader Animation -->
+    <link rel="stylesheet" href="assets/css/loader.css">
 
     <!-- web fonts -->
     <link href="//fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap"
