--- a/faq.html
+++ b/faq.html
@@ -10,10 +10,13 @@
 
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/css/style-starter.css">
+  <!-- Loader Animation -->
+  <link rel="stylesheet" href="assets/css/loader.css">
 
   <!-- web fonts -->
   <link href="//fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <!--header-->
   <header id="site-header" class="fixed-top">
