--- a/faq.html
+++ b/faq.html
@@ -35,7 +35,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item @@about-active">
@@ -53,7 +53,7 @@
             <li class="nav-item @@contact-active">
               <a class="nav-link" href="support.html">Support</a>
             </li>
-            <li class="nav-item @@contact-active">
+            <li class="nav-item @@contact-active active">
               <a class="nav-link" href="faq.html">FAQ</a>
             </li>
           </ul>
@@ -65,7 +65,8 @@
   <!-- contact breadcrumbs -->
   <nav id="breadcrumbs" class="breadcrumbs">
     <div class="container page-wrapper">
-      <a href="index.html">Home</a> » <span class="breadcrumb_last" aria-current="page">FAQ - Frequently Asked Questions</span>
+      <a href="index.html">Home</a> » <span class="breadcrumb_last" aria-current="page">FAQ - Frequently Asked
+        Questions</span>
     </div>
   </nav>
   <!-- /contact breadcrumbs -->
