--- a/faq.html
+++ b/faq.html
@@ -166,16 +166,18 @@
                   <h3>Drop us a Message</h3>
                   <p class="mt-2 mb-3">We love to hear from you, because we care so much about you.</p>
                 </div>
-                <form method="post" class="">
+                <form class="">
                   <div class="main-input">
-                    <input type="text" name="firstname" placeholder="First Name" class="contact-input" required="" />
-                    <input type="text" name="lastname" placeholder="Last Name" class="contact-input" required="" />
-                    <input type="email" name="email" placeholder="Email Address" class="contact-input" />
-                    <textarea class="contact-textarea contact-input" name="w3lMessage" placeholder="Enter your message"
-                      required=""></textarea>
+                    <input type="text" id="firstname" placeholder="First Name" class="contact-input" visitor />
+                    <input type="text" id="lastname" placeholder="Last Name" class="contact-input" visitor />
+                    <input type="tel" id="telephone" placeholder="Phone Number" class="contact-input" visitor />
+                    <input type="email" id="email" placeholder="Email Address" class="contact-input" visitor />
+                    <textarea class="contact-textarea contact-input" id="message" placeholder="Enter your message"
+                      visitor></textarea>
                   </div>
+                  <small id="notify" style="float: left"></small>
                   <div class="text-right">
-                    <button class="btn-primary btn theme-button">Send</button>
+                    <button type="button" class="btn-primary btn theme-button" id="send">Send</button>
                   </div>
                 </form>
               </div>
@@ -234,73 +236,78 @@
 
       <div class="w3l-footer-16-main py-5" style="background-color: #242464 !important">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-6 column">
-                    <div class="row">
-                        <div class="col-md-6 column">
-                            <h3>Quick Links</h3>
-                            <ul class="footer-gd-16">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="events.html">Events</a></li>
-                                <li><a href="career.html">Careers</a></li>
-                                <li><a href="support.html">How to Play</a></li>
-                                <li><a href="register.html">Download</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-6 column mt-md-0 mt-4">
-                            <h3>Legal Information</h3>
-                            <ul class="footer-gd-16">
-                                <li><a href="terms.html">Terms of Use</a></li>
-                                <li><a href="privacy.html#privacy">Privacy Policy</a></li>
-                                <li><a href="privacy.html">Security Agreement</a></li>
-                            </ul>
-                        </div>
-                    </div>
+          <div class="row">
+            <div class="col-lg-6 column">
+              <div class="row">
+                <div class="col-md-6 column">
+                  <h3>Quick Links</h3>
+                  <ul class="footer-gd-16">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="career.html">Careers</a></li>
+                    <li><a href="support.html">How to Play</a></li>
+                    <li><a href="register.html">Download</a></li>
+                  </ul>
                 </div>
-                <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
-                    <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
-                            style="height:25px" />
-                        <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
-                    </h3>
-
-                    <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for
-                        BOATS and
-                        ISLANDERS. The first multiplayer
-                        virtual reality platform for creators.
-                        We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
-                        each other and
-                        enjoy
-                        exclusive content and entertainment from different BOATS (creators) around the world.
-                        Our platform is free for our BOAT ISLAND members, others can connect by purchasing a
-                        token for access.
-                    </p>
+                <div class="col-md-6 column mt-md-0 mt-4">
+                  <h3>Legal Information</h3>
+                  <ul class="footer-gd-16">
+                    <li><a href="terms.html">Terms of Use</a></li>
+                    <li><a href="privacy.html#privacy">Privacy Policy</a></li>
+                    <li><a href="privacy.html">Security Agreement</a></li>
+                  </ul>
                 </div>
+              </div>
             </div>
+            <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
+              <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
+                  style="height:25px" />
+                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
+              </h3>
+
+              <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for
+                BOATS and
+                ISLANDERS. The first multiplayer
+                virtual reality platform for creators.
+                We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
+                each other and
+                enjoy
+                exclusive content and entertainment from different BOATS (creators) around the world.
+                Our platform is free for our BOAT ISLAND members, others can connect by purchasing a
+                token for access.
+              </p>
+            </div>
+          </div>
         </div>
         <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
-            <div class="columns text-lg-left text-center">
-                <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All
-                    rights
-                    reserved
-                </p>
-            </div>
-            <div class="columns-2 mt-lg-0 mt-3">
-                <ul class="social">
-                    <li><a href="https://www.facebook.com/BoatIsland" target="_blank"><span class="fa fa-facebook" aria-hidden="true"></span></a>
-                    </li>
-                    <li><a href="https://instagram.com/boatislandvr?igshid=YmMyMTA2M2Y=" target="_blank"><span class="fa fa-instagram" aria-hidden="true"></span></a>
-                    </li>
-                    <li><a href="https://twitter.com/BoatIslandVr?t=4gl6FXBUVNQ5PS9kBvTP7w&s=09" target="_blank"><span class="fa fa-twitter" aria-hidden="true"></span></a>
-                    </li>
-                    <li><a href="https://youtu.be/yRh7N-CluiM" target="_blank"><span class="fa fa-youtube" aria-hidden="true"></span></a>
-                    </li>
-                    <li><a href="https://www.linkedin.com/company/boatisland/" target="_blank"><span class="fa fa-linkedin" aria-hidden="true"></span></a></li>
-                </ul>
-            </div>
+          <div class="columns text-lg-left text-center">
+            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All
+              rights
+              reserved
+            </p>
+          </div>
+          <div class="columns-2 mt-lg-0 mt-3">
+            <ul class="social">
+              <li><a href="https://www.facebook.com/BoatIsland" target="_blank"><span class="fa fa-facebook"
+                    aria-hidden="true"></span></a>
+              </li>
+              <li><a href="https://instagram.com/boatislandvr?igshid=YmMyMTA2M2Y=" target="_blank"><span
+                    class="fa fa-instagram" aria-hidden="true"></span></a>
+              </li>
+              <li><a href="https://twitter.com/BoatIslandVr?t=4gl6FXBUVNQ5PS9kBvTP7w&s=09" target="_blank"><span
+                    class="fa fa-twitter" aria-hidden="true"></span></a>
+              </li>
+              <li><a href="https://youtu.be/yRh7N-CluiM" target="_blank"><span class="fa fa-youtube"
+                    aria-hidden="true"></span></a>
+              </li>
+              <li><a href="https://www.linkedin.com/company/boatisland/" target="_blank"><span class="fa fa-linkedin"
+                    aria-hidden="true"></span></a></li>
+            </ul>
+          </div>
         </div>
-    </div>
-        </div>
+      </div>
+      </div>
       </div>
       </div>
       <!-- Modal -->
@@ -309,7 +316,8 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <img src="assets/images/bg.jpg" alt="P2W" />
-            <a href="p2w.html" class="btn btn-light theme-button" style="line-height: 2rem; padding: 0 20px; border-radius: 40px; position: absolute; bottom: 20px; left:20px; color: #fff; background: #ab07d4; border: none;">
+            <a href="p2w.html" class="btn btn-light theme-button"
+              style="line-height: 2rem; padding: 0 20px; border-radius: 40px; position: absolute; bottom: 20px; left:20px; color: #fff; background: #ab07d4; border: none;">
               Go To Event</a>
           </div>
         </div>
@@ -337,14 +345,6 @@
           document.body.scrollTop = 0;
           document.documentElement.scrollTop = 0;
         }
-      </script>
-      <!-- //move top -->
-      <script>
-        $(function () {
-          $('.navbar-toggler').click(function () {
-            $('body').toggleClass('noscroll');
-          })
-        });
       </script>
     </section>
     <!-- //footer -->
@@ -379,6 +379,14 @@
       });
     });
   </script>
+  <!-- //move top -->
+  <script>
+    $(function () {
+      $('.navbar-toggler').click(function () {
+        $('body').toggleClass('noscroll');
+      })
+    });
+  </script>
   <!--/MENU-JS-->
   <script>
     $(window).on("scroll", function () {
@@ -410,8 +418,74 @@
 
   <!--  Bootstrap JS -->
   <script src="assets/js/bootstrap.min.js"></script>
-  <!-- Direct download link -->
-  <!-- https://w3g3a5v6.ssl.hwcdn.net/upload2/game/1542935/5938445?GoogleAccessId=uploader@moonscript2.iam.gserviceaccount.com&Expires=1659114131&Signature=b9j3FxiCdFQtixkTUmC2vEBbtqlbF78lLCPqP6sw%2FaqdBQVavONBeDfe6%2Fm6uHYhHE%2ByIn2H2CJVR%2F9IPXjV8sirVy4E97W4gLi643W179jqP1wdzv49wQnipz74vAn2QMvS54NbRY1Wws4CZ7MbbyNNqVN1AlzUg8e4FughhPLvrGUN2gNkuGW3ftNRZ0DMnGW9XsHkTnJ7LY7OmHUrgjpfDYIVPF1r1Yyr%2FkeWvxvjDs%2FgZJtjdjl5wjxIsG7lIt7scV9xQ4oCEOEOv%2FYYtLVXpWE6FKM7yV2vKgiHcMSmeYXxJUxX1KBgpdkAzuyPcEjGzCe02aliHrpO44kpIg==&hwexp=1659114391&hwsig=4b7e655c6cd960b6ed88847b93cefa36 -->
+  <script>
+    $(() => {
+
+      $('#send').click(() => {
+        if (Visitor.validateInput('visitor'))
+          Visitor.Send();
+      })
+
+      const Visitor = {
+        response: {
+          status: undefined,
+          message: ''
+        },
+        Send: () => {
+          $.ajax({
+            url: 'server/mailer/mailer.php',
+            type: 'POST',
+            dataType: 'JSON',
+            beforeSend: () => {
+              $('#send').html('<label>');
+              $('#send label').addClass('loader')
+            },
+            data: {
+              firstname: $('#firstname').val(),
+              lastname: $('#lastname').val(),
+              email: $('#email').val(),
+              telephone: $('#telephone').val(),
+              message: $('#message').val(),
+            },
+            success: (res) => {
+              Visitor.response.status = res.status;
+              Visitor.response.message = res.msg
+            },
+            complete: () => {
+              if (Visitor.response.status == true) {
+                $('#notify').html(Visitor.response.message).addClass('alert alert-success')
+                $('#send').html('Send');
+                setTimeout(() => {
+                  $('#notify').fadeOut(2000).val(null).removeClass('alert alert-success').show();
+                }, 10000)
+              }
+              else {
+                $('#notify').html(Visitor.response.message).addClass('alert alert-danger')
+                $('#send').html('Send');
+                setTimeout(() => {
+                  $('#notify').fadeOut(2000).val(null).removeClass('alert alert-danger').show();
+                }, 10000)
+              }
+            }
+          })
+        },
+        // Form Validator
+        validateInput: (inputArgs) => {
+          let validInput = $('[' + inputArgs + ']');
+          for (let formInput = 0; formInput < validInput.length; formInput++) {
+            if (validInput.get(formInput).value == null || validInput.get(formInput).value == '') {
+              validInput[formInput].placeholder = 'This field is required';
+              validInput[formInput].style.borderWidth = '5px';
+              validInput[formInput].style.borderStyle = 'solid';
+              validInput[formInput].style.borderLeftColor = '#a00';
+              return false;
+            }
+          }
+          return true;
+        }
+      }
+    })
+  </script>
 </body>
 
 </html>
